<?xml version="1.0"?>
<package format="2">
  <name>crane_anticollision</name>
  <version>0.0.1</version>
  <description>Multi tower crane anti-collision node based on encoder/joint states.</description>

  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>crane_msg</depend>

  <export/>
</package>

